--- a/index.html
+++ b/index.html
@@ -14,6 +14,22 @@
 
 
 <!-- Add some copy here -->
-<p>Making a pizza is similar to coding. There are certaiin things we have to do first. Like making the base, letting it rise, mould the base out, add the sauce, add the toppings, add the cheese, bake, and cut and serve. not all pizzas end up the same, but they do start out in the same way as long as you follow the order correctly. you can have everything you need to make many different pizzas using thr same base structure that is set up before hand.</p>
+<p>Making a pizza is similar to coding. There are certaiin things we have to do first. Like making the base, letting it rise, mould the base out, add the sauce, add the toppings, add the cheese, bake, and cut and serve. not all pizzas end up the same, but they do start out in the same way as long as you follow the order correctly. you can have everything you need to make many different pizzas using thr same base structure that is set up before hand.
+
+<!-- Add some copy here -->
+<h5>This is how you make a pizza</h5>
+<p>There are some specific steps you need to take the make a pizza, we will list them here.</p>
+
+ <ol>
+    <li>make the pizza base</li>
+    <li>add the tomato sauce</li>
+    <li>add the toppings</li>
+    <li>add the cheese</li>
+    <li>bake</li>
+    <li>cut</li>
+    <li>serve</li>
+ </ol>
+
+
 </body>
 </html>
