--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
     <li>serve</li>
  </ol>
 
+ <h6>The toppings are different, they change for every occasion and taste. There is no order to toppings. So we will list them like this.
+     <ul>
+         <li>Pepperoni</li>
+         <li>olives</li>
+         <li>peppers (never green)</li>
+         <li>mushrooms</li>
+         <li>onions</li>
+         <li>jalapenos</li>
+         <li>pinapple (only if you are crazy</li>
+         <li>bacon</li>
+     </ul>
+ </h6>
+
 
 </body>
 </html>
