--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
      <ul>
          <li>Pepperoni</li>
          <li>olives</li>
-         <li>peppers (never green)</li>
+         <li>peppers <strong>(never green)</strong></li>
          <li>mushrooms</li>
          <li>onions</li>
          <li>jalapenos</li>
-         <li>pinapple (only if you are crazy</li>
+         <li>pinapple <em>(only if you are crazy</em></li>
          <li>bacon</li>
      </ul>
  </h6>
