--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <!-- Add some copy here -->
 <h5>This is how you make a pizza</h5>
-<p>There are some specific steps you need to take the make a pizza, we will list them here.</p>
+<p><small>There are some specific steps you need to take the make a pizza, we will list them here.</small></p>
 
  <ol>
     <li>make the pizza base</li>
@@ -38,7 +38,7 @@
          <li>mushrooms</li>
          <li>onions</li>
          <li>jalapenos</li>
-         <li>pinapple <em>(only if you are crazy</em></li>
+         <li>pinapple <em>(only if you are crazy)</em></li>
          <li>bacon</li>
      </ul>
  </h6>
