--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
          <li>bacon</li>
      </ul>
  </h6>
-
+ 
+ <p>Here's is the <a href="https://en.wikipedia.org/wiki/Pizza" target="_blank">Wikipedia article about pizza</a></p>
 
 </body>
 </html>
