--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    
    <link rel='stylesheet' href='styles.css'/>
-   
+
    <title>Pizza Party</title>
 </head>
 <body>
@@ -17,10 +17,14 @@
 
 
 <!-- Add some copy here -->
-<p>Making a pizza is similar to coding. There are certaiin things we have to do first. Like making the base, letting it rise, mould the base out, add the sauce, add the toppings, add the cheese, bake, and cut and serve. not all pizzas end up the same, but they do start out in the same way as long as you follow the order correctly. you can have everything you need to make many different pizzas using thr same base structure that is set up before hand.
+<p class="special">Making a pizza is similar to coding. There are certain things we have to do first. 
+Like making the base, letting it rise, mould the base out, add the sauce, add the toppings, 
+add the cheese, bake, and cut and serve. not all pizzas end up the same, but they do start out 
+in the same way as long as you follow the order correctly. you can have everything you need to 
+make many different pizzas using thr same base structure that is set up before hand.</p>
 
 <!-- Add some copy here -->
-<h5>This is how you make a pizza</h5>
+<h5 class="special">This is how you make a pizza</h5>
 <p><small>There are some specific steps you need to take the make a pizza, we will list them here.</small></p>
 
  <ol>
