more change to colour

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 Like making the base, letting it rise, mould the base out, add the sauce, add the toppings, 
 add the cheese, bake, and cut and serve. not all pizzas end up the same, but they do start out 
 in the same way as long as you follow the order correctly. you can have everything you need to 
-make many different pizzas using thr same base structure that is set up before hand.</p>
+make many different pizzas using the same base structure that is set up before hand.</p>
 
 <!-- Add some copy here -->
 <h5 class="special">This is how you make a pizza</h5>
@@ -37,16 +37,16 @@ make many different pizzas using thr same base structure that is set up before h
     <li>serve</li>
  </ol>
 
- <h6>The toppings are different, they change for every occasion and taste. There is no order to toppings. So we will list them like this.
+ <h6 class="special">The toppings are different, they change for every occasion and taste. There is no order to toppings. So we will list them like this.
      <ul>
-         <li>Pepperoni</li>
+         <li class="fave">Pepperoni</li>
          <li>olives</li>
          <li>peppers <strong>(never green)</strong></li>
          <li>mushrooms</li>
          <li>onions</li>
-         <li>jalapenos</li>
+         <li class="fave">jalapenos</li>
          <li>pinapple <em>(only if you are crazy)</em></li>
-         <li>bacon</li>
+         <li class="fave">bacon</li>
      </ul>
  </h6>
  
