--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@ make many different pizzas using the same base structure that is set up before h
  
  <p>Here's is the <a href="https://en.wikipedia.org/wiki/Pizza" target="_blank">Wikipedia article about pizza</a></p>
  
- <img  src="images/pizza.jpg" alt="a picture of a pizza">
+ <img class="pizza" src="images/pizza.jpg" alt="a picture of a pizza">
 
 </body>
+
 </html>
